src/Resources/css/printContent/pagedjsTable.css
html,
body {
  font-family: 'Times New Roman', Times, Georgia, serif;
  font-size: 12pt;
  font-weight: normal;
  /* text-align: justify; */
  
  border: 0;
  margin: 0;  /* html margin affects before sending to printer */
  padding: 0;
  border-spacing: 0px;
} 
/* Do not use fix the bottom margin by vertically align the content top 
 give at least .25 inch approx. 7 mm margin on top and bottom
 */
/* .pagedjs_margin-bottom-center {
    align-items: flex-start;   
}  */
@page  
{   
    @top-center {
        content: element(headerMiddle); 
        width:100%;
    }

    @bottom-center {
        content: element(footerMiddle); 
        width:100%;
    }
    
    @top-left {
        content: element(headerLeft); 
        width:none; min-width: none;
    }
    @top-right {
        content: element(headerRight); 
        width:none; min-width: none;
    }
    @bottom-left {
        content: element(footerLeft); 
        width:none; min-width: none;
    }
    @bottom-right {
        content: element(footerRight); 
        width:none; min-width: none;
    }
} 

@page: blank { 
    /* @top-center { content: "This page is intentionally left blank." } */
    @top-center {
        content: none;
    }
    @top-left {
        content: none;
    }
    @top-right {
        content: none;
    }

    @bottom-center {
        content: none;
    }
    @bottom-left {
        content: none;
    }
    @bottom-right {
        content: none;
    }
}



.headerMiddle{
    position: running(headerMiddle);
}
.footerMiddle{
    position: running(footerMiddle);
}
.pagedjs_margin.pagedjs_margin-top-center.hasContent {
    align-items: flex-start !important ;
}
.pagedjs_margin.pagedjs_margin-bottom-center.hasContent {
    align-items: flex-end !important ;
}

/* printTable class is the table fix applied all over the page. So do not apply the border for that
apply only the content portion table */
.content .dataTable,
.content .dataTable th,
.content .dataTable td {
  border: 0.25mm solid black;
  word-break: break-word;
  border-spacing: 0px;
}
/* dont apply border collapse for datatable which creates a empty page problem if content of a cell overflows more than 2 pages */
.content .dataTable th,
.content .dataTable td {
  border-collapse: collapse;
  vertical-align: text-top;
  padding: 1mm;
}

/* 
 page-break-inside: avoid creates the empty page when contents of rows goes over than 2 pages
 The entire row becomes invisible as well.
 monitor for fix the table rows which are getting hidden 
.content .dataTable td {
  page-break-inside: avoid;
}*/

/* not working workaround adjust proper header and footer height params


html, body, .content { this creates the empty page on the top issue
  overflow-x: hidden;
}

.headerMiddle
.footerMiddle
.content div
{
    overflow: hidden;
} */

